# WesWindowSwitcher

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
WWS/: CMakeLists.txt  imgui.ini  wws_config.json
WWS/include/: WWS.h  gui.h  hook.h  settings.h  win_enum.h
WWS/src/: CMakeLists.txt  gui.cpp  hook.cpp  main.cpp  settings.cpp  win_enum.cpp
scripts/: update_wiki.sh
